# mushroom

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.extra.md
data/splits/test_labeled/v1/: mushroom.ar-tst.v1.extra.jsonl  mushroom.ca-tst.v1.extra.jsonl  mushroom.cs-tst.v1.extra.jsonl  mushroom.es-tst.v1.extra.jsonl  mushroom.eu-tst.v1.extra.jsonl  mushroom.fa-tst.v1.extra.jsonl  mushroom.fi-tst.v1.extra.jsonl  mushroom.hi-tst.v1.extra.jsonl  mushroom.it-tst.v1.extra.jsonl  mushroom.sv-tst.v1.extra.jsonl  mushroom.zh-tst.v1.extra.jsonl
data/splits/val/v2/: mushroom.ar-val.v2.extra.jsonl  mushroom.es-val.v2.extra.jsonl  mushroom.fi-val.v2.extra.jsonl  mushroom.hi-val.v2.extra.jsonl  mushroom.it-val.v2.extra.jsonl  mushroom.sv-val.v2.extra.jsonl  mushroom.zh-val.v2.extra.jsonl
notebook/: Hallucation.ipynb  Hallucination.ipynb
rag/: rag_main.py
src/: config.py  data_loader.py  interface.py  main.py  rag_simple_api.py
src/fact_extractor/: __init__.py  fact_alignment.py
src/hallucination_classification/: utils.py
src/mushroom/config/: config.py
src/mushroom/participant_kit/: baseline_model.py  baseline_random_guess.py  format_checker.py  scorer.py
src/mushroom/pipeline/: interface.py  pipeline.py
src/mushroom/pipeline/data_connector/: __init__.py  data_connector.py
src/mushroom/pipeline/fact_extractor/: __init__.py  fact_alignment.py  fact_extraction.py  fact_extraction_brf.py  llm.py  models.py  prompts.py
src/mushroom/pipeline/retrieval/: rag_simple_api.py  retrieval.py
src/mushroom/utils/: download_data.py
src/mushroom/wip/: data_loader.py  experiments.py  llm.py  main.py  rag_simple_api.py  serve.py
src/rag/: rag_main.py
(+5 files in other folders)
