[project]
name = "mushroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.45.5",
    "colorama>=0.4.6",
    "dacite>=1.9.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "scipy>=1.15.2",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
